<resources>

    <string name="google_app_id">28739837504</string>

    <string name="app_name">GetTogether</string>
    <string name="guest_activity">Guests List</string>
    <string name="action_settings">Settings</string>
    <string name="event_edit_menu">Edit Event</string>
    <string name="guest_list_item_menu">Guests List</string>
    <string name="guest_edit_menu">Edit Guest</string>
    <string name="event_guest_list_title">Select Guest</string>

    <!-- ########## Intents ########## -->
    <string name="guest_list_open_action_intent">app.com.ttins.gettogether.ACTION_GUESTSLIST_OPEN</string>

    <!-- ########## Empty Recycler View Message ########## -->
    <string name="no_data_available">No data available</string>

    <!-- ########## Event List Overflow Menu ########## -->

    <!-- ########## Event Activity ########## -->
    <string name="toolbar_image_content_description">Toolbar Image</string>
    <string name="toolbar_image_protection_content_description">Toolbar Image Protection</string>

    <!-- ########## Event Edit View Labels ########## -->
    <string name="image_label_event_edit_view">Preview</string>
    <string name="event_title_label_event_edit_view">Event Title</string>
    <string name="event_type_label_event_edit_view">Type</string>
    <string name="location_label_event_edit_view">Location</string>
    <string name="meeting_location_label_event_edit_view">Meeting Location</string>
    <string name="start_date_label_event_edit_view">Start Date</string>
    <string name="end_date_label_event_edit_view">End Date</string>
    <string name="start_time_label_event_edit_view">Start Time</string>
    <string name="end_time_label_event_edit_view">End time</string>
    <string name="phone_label_event_edit_view">Phone</string>
    <string name="note_label_event_edit_view">Note</string>
    <string name="empty_note_text_event_edit_view">No details</string>
    <string name="map_icon_content_description">Map Icon</string>
    <string name="event_time_icon_content_description">Event Time Icon</string>
    <string name="event_date_location_icon_content_description">Event Date Icon</string>
    <string name="event_meet_location_icon_content_description">Event Meet Location Icon</string>
    <string name="phone_icon_content_description">Phone Number Icon</string>
    <string name="guest_list_icon_content_description">Guest List Icon</string>
    <string name="event_notes_icon_content_description">Event Notes Icon</string>

    <!-- ########## Event Edit View Labels ########## -->
    <string name="guest_name_label_guest_edit_view">Guest name</string>
    <string name="gender_label_guest_edit_view">Gender</string>
    <string name="phone_label_guest_edit_view">Phone Number</string>
    <string name="address_label_guest_edit_view">Address</string>
    <string name="event_title_icon_content_description">Event Title Icon</string>
    <string name="event_image_icon_content_description">Event Image Selection Icon</string>
    <string name="event_location_icon_content_description">Event Location Icon</string>
    <string name="hint_date_button_event_edit_view">Click to select a date</string>
    <string name="hint_time_button_event_edit_view">Click to select a time</string>
    <string name="hint_place_button_event_edit_view">Click to select a place</string>
    <string name="note_hint_text_event_edit_view">Insert Note here</string>

    <!-- ########## Transitions ########## -->
    <string name="event_transition_image">Event Transition Image</string>
    <string name="event_transition_text">Event Transition Text</string>

    <!-- ########## Event Details ########## -->
    <string name="null_field">-</string>
    <string name="no_guests">No Guests</string>
    <string name="notes_label_detail_text_view">Notes</string>
    <string name="transition_image">transition_image</string>

    <!-- ########## Guest Details ########## -->
    <string name="guest_phone_icon_content_description">Guest Phone Number Icon</string>
    <string name="guest_address_icon_content_description">Guest Address Icon</string>
    <string name="guest_google_map_icon_content_description">Guest Google Map Position Icon</string>
    <string name="guest_photo_icon_content_description">Guest Photo Icon</string>

    <!-- ########## Guest Edit ########## -->
    <string name="guest_name_text_hint_guest_edit_layout">Insert Guest Name</string>
    <string name="guest_address_text_hint_guest_edit_layout">Insert Guest Address</string>

    <!-- ########## Map ########## -->
    <string name="default_map_address">Mountain View</string>

</resources>
