<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rowCount="14"
        app:columnCount="4">

        <!-- ##################### Row 0 ##################### -->
        <TextView
            android:id="@+id/event_title_label_event_edit_view"
            android:text="@string/event_title_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <TextView
            android:id="@+id/image_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="3"
            app:layout_gravity="center_horizontal"
            android:text="@string/image_label_event_edit_view"
            android:padding="@dimen/medium_margin_material_design" />


        <!-- ##################### Row 1 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_title_icon_content_description"
            app:layout_row="1"
            app:layout_column="0"
            android:src="@drawable/ic_title_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/event_title_edit_text_event_edit_view"
            android:theme="@style/SingleLineEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_row="1"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom"/>

        <ImageView
            android:id="@+id/image_icon_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_image_icon_content_description"
            app:layout_row="1"
            app:layout_column="3"
            app:layout_gravity="center"
            android:src="@drawable/ic_image_black_36dp" />

        <!-- ##################### Row 2 ##################### -->

        <TextView
            android:id="@+id/location_label_event_edit_view"
            android:text="@string/location_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />


        <!-- ##################### Row 3 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_location_icon_content_description"
            app:layout_row="3"
            app:layout_column="0"
            android:src="@drawable/ic_location_on_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/location_edit_text_event_edit_view"
            android:theme="@style/SingleLineEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_row="3"
            android:focusable="false"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom" />

        <!-- ##################### Row 4 ##################### -->
        <TextView
            android:id="@+id/meeting_location_label_event_edit_view"
            android:text="@string/meeting_location_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="4"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 5 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_meet_location_icon_content_description"
            app:layout_row="5"
            app:layout_column="0"
            android:src="@drawable/ic_map_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/meeting_location_edit_text_event_edit_view"
            android:theme="@style/SingleLineEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_row="5"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom" />

        <!-- ##################### Row 6 ##################### -->
        <TextView
            android:id="@+id/start_date_label_event_edit_view"
            android:text="@string/start_date_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="6"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 7 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_date_location_icon_content_description"
            app:layout_row="7"
            app:layout_column="0"
            android:src="@drawable/ic_date_range_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/date_start_text_view_event_edit_view"
            android:theme="@style/SingleLineEditText"
            android:inputType="none"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_row="7"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom" />

        <!-- ##################### Row 8 ##################### -->
        <TextView
            android:id="@+id/start_time_label_event_edit_view"
            android:text="@string/start_time_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="8"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 9 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_time_icon_content_description"
            app:layout_row="9"
            app:layout_column="0"
            android:src="@drawable/ic_access_time_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/time_start_text_view_event_edit_view"
            android:theme="@style/SingleLineEditText"
            android:inputType="none"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_row="9"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom" />

        <!-- ##################### Row 10 ##################### -->
        <TextView
            android:id="@+id/phone_label_event_edit_view"
            android:text="@string/phone_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="10"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 11 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone_icon_content_description"
            app:layout_row="11"
            app:layout_column="0"
            android:src="@drawable/ic_phone_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/phone_edit_text_event_edit_view"
            android:theme="@style/SingleLineEditText"
            android:inputType="phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_row="11"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom" />

        <!-- ##################### Row 12 ##################### -->
        <TextView
            android:id="@+id/note_label_event_edit_view"
            android:text="@string/note_label_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="12"
            app:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 13 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/event_notes_icon_content_description"
            app:layout_row="13"
            app:layout_column="0"
            android:src="@drawable/ic_note_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/note_text_view_event_edit_view"
            android:text="@string/empty_note_text_event_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="13"
            app:layout_column="1"
            android:maxWidth="200dp"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design"
            android:layout_marginBottom="@dimen/medium_margin_material_design"
            app:layout_gravity="bottom" />

    </android.support.v7.widget.GridLayout>


</android.support.v4.widget.NestedScrollView>
