<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="3">

        <!-- ##################### Row 0 ##################### -->
        <ImageView
            android:id="@+id/guest_photo_guest_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="2"
            android:layout_row="0"
            android:layout_column="0"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <TextView
            android:id="@+id/guest_name_label_guest_edit_view"
            android:text="@string/guest_name_label_guest_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!--TextView
            android:id="@+id/gender_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/gender_label_guest_edit_view"
            android:padding="@dimen/medium_margin_material_design" /-->


        <!-- ##################### Row 1 ##################### -->
        <EditText
            android:id="@+id/guest_name_edit_text_guest_edit_view"
            android:theme="@style/SingleLineEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!--ImageView
            android:id="@+id/image_icon_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center"
            android:src="@drawable/ic_image_black_36dp" /-->

        <!-- ##################### Row 2 ##################### -->

        <TextView
            android:id="@+id/phone_label_guest_edit_view"
            android:text="@string/phone_label_guest_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />


        <!-- ##################### Row 3 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:src="@drawable/ic_location_on_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/phone_edit_text_guest_edit_view"
            android:theme="@style/SingleLineEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 4 ##################### -->
        <TextView
            android:id="@+id/address_label_guest_edit_view"
            android:text="@string/address_label_guest_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />

        <!-- ##################### Row 5 ##################### -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:src="@drawable/ic_map_black_36dp"
            android:padding="@dimen/medium_margin_material_design" />

        <EditText
            android:id="@+id/address_edit_text_guest_edit_view"
            android:theme="@style/SingleLineEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:paddingStart="@dimen/medium_margin_material_design"
            android:paddingEnd="@dimen/medium_margin_material_design" />


    </GridLayout>
</android.support.v4.widget.NestedScrollView>
